--- a/src/components/Favorites/Favorites.module.css
+++ b/src/components/Favorites/Favorites.module.css
@@ -1,3 +1,5 @@
+/* CSS-Cards */
+
 .containerSemi{
 	display: inline-block;
 	background-color: rgba(111, 207, 21, 0.5);
@@ -100,8 +102,28 @@
 	margin-top: 10px;
 	margin-left: 245px;
 	position: absolute;
-    border-radius: 50%; /*Redondear bordes*/
-    border: solid 1px rgba(67, 139, 0, 0.856);
-	background-color: rgba(128, 230, 32, 0.753);
-	box-shadow: 0 2px 4px rgba(90, 201, 79, 0.527);
+	cursor: pointer;
+
+}
+
+/* CSS-filter */
+
+.Container{
+	margin: 5px;
+	text-align: center;	
+}
+
+.Container h1{
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: 40px;
+	font-family: Neucha;
+    position: relative;
+    z-index: 99;
+	color: rgba(111, 207, 21, 0.5);
+}
+
+.Container select{
+	margin: auto;
+	margin-left: 10px;
 }
