--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 1;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -9,8 +9,7 @@ body {
   background-image: url("assets/img/back-morty.png");
   background-repeat:  no-repeat;
   background-size:  cover;
-  background-attachment: fixed;
-
+  background-attachment: fixed;;
 }
 
 code {
